# Memory-Allocation-Using-Segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Hole.h  Memory.h  Process.h  Record.h
src/: Memory.cpp  main.cpp
